--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,9 +52,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/images/logo.jpg"  
-  adaptive_icon_background: "#ffffff"   # background color (ya phir ek image de sakti ho)
-  adaptive_icon_foreground: "assets/images/logo.jpg"
+  image_path: "assets/icons/icon.png"  
 
 
 # For information on the generic Dart part of this file, see the
@@ -71,6 +69,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
