--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,10 +49,23 @@ dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   rating_dialog: ^2.0.4
 
-flutter_launcher_icons:
-  android: true
+flutter_launcher_icons:             
+  android: "launcher_icon"
   ios: true
-  image_path: "assets/icons/icon.png"  
+  image_path: "assets/icons/icon.png"
+  min_sdk_android: 21
+  web:
+    generate: true
+    image_path: "assets/icons/icon.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/icons/icon.png"
+    icon_size: 48
+  macos:
+    generate: true
+    image_path: "assets/icons/icon.png"
 
 
 # For information on the generic Dart part of this file, see the
