--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   flutter_launcher_icons: ^0.13.1
   rating_dialog: ^2.0.4
+  lottie: ^3.3.2
 
 flutter_launcher_icons:             
   android: "launcher_icon"
@@ -83,6 +84,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/animations/
 
   #   - images/a_dot_ham.jpeg
 
